RESOLVED FIXED279248
Copying link to a common term in an article results in the incorrect part of the page being highlighted
https://bugs.webkit.org/show_bug.cgi?id=279248
Summary Copying link to a common term in an article results in the incorrect part of ...
Tim Horton
Reported 2024-09-05 22:44:59 PDT
Copying link to a common term in an article results in the incorrect part of the page being highlighted
Attachments
Tim Horton
Comment 1 2024-09-05 22:45:00 PDT
Tim Horton
Comment 2 2024-09-05 22:50:07 PDT
EWS
Comment 3 2024-09-07 02:05:28 PDT
Committed 283294@main (42ee0a01c846): <https://commits.webkit.org/283294@main> Reviewed commits have been landed. Closing PR #33229 and removing active labels.
EWS
Comment 4 2024-09-13 13:42:38 PDT
Committed 283286.37@safari-7620-branch (0e08822289bb): <https://commits.webkit.org/283286.37@safari-7620-branch> Reviewed commits have been landed. Closing PR #1719 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.