Copying link to a common term in an article results in the incorrect part of the page being highlighted https://bugs.webkit.org/show_bug.cgi?id=279248 rdar://134882107

Reviewed by Richard Robinson and Megan Gardner.

The fragment directive generation code was terminating its context walk when it hit
*any* node boundary, meaning that (for example) if you selected a word in its own <b>,
we wouldn't be able to generate any context, and the link would match the first
instance of that word on the page, not the correct one.

The intent was to match the fragment directive *search* code, which breaks across
block boundaries, not any element's boundary. Factor out this code (and add a
place where we can share code between generation and search, since we will likely
need more of that in the future).

* LayoutTests/http/tests/scroll-to-text-fragment/generation-can-pass-inline-boundaries-expected.txt: Added.
* LayoutTests/http/tests/scroll-to-text-fragment/generation-can-pass-inline-boundaries.html: Added.
Add a test.

* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/dom/FragmentDirectiveGenerator.cpp:
(WebCore::positionsHaveSameBlockAncestor):
(WebCore::previousWordsFromPositionInSameBlock):
(WebCore::nextWordsFromPositionInSameBlock):
Make the aforementioned change, only terminating the context search when we exit the block.

(WebCore::FragmentDirectiveGenerator::generateFragmentDirective):
Make sure layout is up to date before we go reading from the render tree.
Move the fragment directive prefix string closer to its use.

(WebCore::previousWordsFromPosition): Deleted.
(WebCore::nextWordsFromPosition): Deleted.

* Source/WebCore/dom/FragmentDirectiveRangeFinder.cpp:
(WebCore::FragmentDirectiveRangeFinder::nearestBlockAncestor): Deleted.
* Source/WebCore/dom/FragmentDirectiveUtilities.cpp: Added.
(WebCore::FragmentDirectiveUtilities::nearestBlockAncestor):
* Source/WebCore/dom/FragmentDirectiveUtilities.h: Added.
Factor out nearestBlockAncestor. I couldn't find anything similar in the rest
of the project, so for now kept it local to this code.

Canonical link: https://commits.webkit.org/283294@main